--- a/src/main/views/startup.jinja2
+++ b/src/main/views/startup.jinja2
@@ -8,7 +8,7 @@
 
     <div class="regForm">
         <div class="tab">
-            <h2>Step 1</h2>
+            <h2>Create Identifier</h2>
             <label for="password_input">
                 <b>Username</b>
             </label>
