--- a/src/main/views/recovery.jinja2
+++ b/src/main/views/recovery.jinja2
@@ -1,79 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="../static/recovery.css">
     <body onload="createBridge()">
-        <h1>recovery</h1>
+        <h1>Recovery</h1>
 
-        <div id="username_select_zone">
-            <select id="username_input" onchange="disable()">
-                {% for username in usernames %} <!--Automatically select username for which recovery was asked-->
-                    {% if username == selected_username %}
-                        <option value="{{username[0]}}" selected>{{username[0]}}</option>
-                    {% else %}
-                        <option value="{{username[0]}}">{{username[0]}}</option>
-                    {% endif %}
-                {% endfor %}
-            </select>
+        <div class="regForm">
+            <div class="tab"  id="username_select_zone">
+                <h2>Step 1</h2>
+                <select id="username_input" onchange="disable()">
+                    {% for username in usernames %} <!--Automatically select username for which recovery was asked-->
+                        {% if username == selected_username %}
+                            <option value="{{username[0]}}" selected>{{username[0]}}</option>
+                        {% else %}
+                            <option value="{{username[0]}}">{{username[0]}}</option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+                <br>
+                <button class="backtologin" id="backLogin" onclick="backLogin()">
+                    Back to login
+                </button>
+            </div>
 
-            <button onclick="enableResponseZone()">
-                start
-            </button>
+            <div class="tab" id="response_zone" >
+                <h2>Step 2</h2>
+                <b>Question:<label for="answer_input" id="question"></label></b>
+                <br>
+                <br>
+                <input type="text"  id="answer_input" placeholder="Answer">
 
-            <br> <br>
+            </div>
 
-            <button id="backLogin" onclick="backLogin()">
-                Back to login
-            </button>
+            <div class="tab" id="new_informations_zone">
+                <label for="new_password_input">
+                    New Password
+                </label>
+                <input type="password" id="new_password_input">
+                <br> <br>
 
-        </div>
+                <label for="new_question_input">
+                    New Question
+                </label>
+                <input type="text" id="new_question_input">
+                <br> <br>
 
-    <br><br>
+                <label for="new_answer_input">
+                    New Answer
+                </label>
+                <input type="text" id="new_answer_input">
+                <br> <br>
 
+                <br><br>
+            </div>
 
-        <div id="response_zone" hidden>
-            <label for="answer_input" id="question"> </label>
+            <div >
+              <div style="float:right;">
+                <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
+                <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+              </div>
+            </div>
 
-            <input type="text"  id="answer_input" placeholder="Answer">
-
-            <button  id="submit_answer" onclick="submitAnswer()">
-                Submit answer
-            </button>
-            <button onclick="backToRecover()">
-                Back
-            </button>
-        </div>
-
-
-    <br><br>
-
-
-        <div id="new_informations_zone" hidden>
-            <label for="new_password_input">
-                New Password:
-            </label>
-            <input type="password" id="new_password_input">
-            <br> <br>
-
-            <label for="new_question_input">
-                New Question:
-            </label>
-            <input type="text" id="new_question_input">
-            <br> <br>
-
-            <label for="new_answer_input">
-                New Answer:
-            </label>
-            <input type="text" id="new_answer_input">
-            <br> <br>
-
-            <button onclick="submitNewInformations()">
-                Submit new informations
-            </button>
-            <br><br>
-
-            <button id="cancel-new-info" onclick="backToRecover()">
-                Back
-            </button>
-
+            <div class="dots" style="text-align:center;margin-top:40px;">
+              <span class="step"></span>
+              <span class="step"></span>
+              <span class="step"></span>
+            </div>
         </div>
     </body>
 </html>
@@ -81,6 +72,91 @@
 <script src="qrc:///qtwebchannel/qwebchannel.js"></script>
 <script>
     // TODO: Submit Answer in controller + comments on this page in order to understand how it works
+
+
+    var currentTab = 0; // Current tab is set to be the first tab (0)
+    showTab(currentTab); // Display the current tab
+
+    function showTab(n) {
+      // This function will display the specified tab of the form ...
+      var x = document.getElementsByClassName("tab");
+      x[n].style.display = "block";
+      // ... and fix the Previous/Next buttons:
+      if (n === 0) {
+        document.getElementById("prevBtn").style.display = "none";
+      } else {
+        document.getElementById("prevBtn").style.display = "inline";
+      }
+      if (n === (x.length - 1)) {
+        document.getElementById("nextBtn").innerHTML = "Submit new informations";
+      } else if(n === 0){
+        document.getElementById("nextBtn").innerHTML = "Start";
+      }else{
+          document.getElementById("nextBtn").innerHTML = "Next";
+      }
+      // ... and run a function that displays the correct step indicator:
+      fixStepIndicator(n)
+    }
+
+    function nextPrev(n) {
+      // This function will figure out which tab to display
+      var x = document.getElementsByClassName("tab");
+      // Exit the function if any field in the current tab is invalid:
+      if (n === 1 && !validateForm()) return false;
+      if(currentTab === 0){
+          enableResponseZone();
+      }
+      if(currentTab === 1){
+          submitAnswer();
+      }
+      // Hide the current tab:
+      x[currentTab].style.display = "none";
+      // Increase or decrease the current tab by 1:
+      currentTab = currentTab + n;
+      // if you have reached the end of the form... :
+      if (currentTab >= x.length) {
+        //...the form gets submitted:
+        submitNewInformations();
+        return false;
+      }
+      // Otherwise, display the correct tab:
+      showTab(currentTab);
+    }
+
+    function validateForm() {
+      // This function deals with validation of the form fields
+      var x, y, i, valid = true;
+      x = document.getElementsByClassName("tab");
+      y = x[currentTab].getElementsByTagName("input");
+      // A loop that checks every input field in the current tab:
+      for (i = 0; i < y.length; i++) {
+        // If a field is empty...
+        if (y[i].value === "") {
+          // add an "invalid" class to the field:
+          y[i].className += " invalid";
+          // and set the current valid status to false:
+          valid = false;
+        }
+      }
+      // If the valid status is true, mark the step as finished and valid:
+      if (valid) {
+        document.getElementsByClassName("step")[currentTab].className += " finish";
+      }
+      return valid; // return the valid status
+    }
+
+    function fixStepIndicator(n) {
+      // This function removes the "active" class of all steps...
+      var i, x = document.getElementsByClassName("step");
+      for (i = 0; i < x.length; i++) {
+        x[i].className = x[i].className.replace(" active", "");
+      }
+      //... and adds the "active" class to the current step:
+      x[n].className += " active";
+    }
+
+
+
     // Create the QWebChannel object and connect to the bridge
     async function createBridge() {
         await new QWebChannel(qt.webChannelTransport, function (channel) {
