--- a/src/main/views/app.jinja2
+++ b/src/main/views/app.jinja2
@@ -50,7 +50,7 @@
                                     <input type="password" name="password" id="password" placeholder="password" required>
                                     <br>
                                     <label for="Add_icon">Manually provide icon if not found automatically.</label>
-                                    <input type="checkbox" name="Add_icon" id="Add_icon" checked>
+                                    <input type="checkbox" name="Add_icon" id="Add_icon">
                                     <br>
                                     <input type="submit" value="Add" id="add" onclick="pushPassword()">
                                 </div>
