FE: added fade in animation for better waiting visuals

--- a/src/main/views/login.jinja2
+++ b/src/main/views/login.jinja2
@@ -70,7 +70,7 @@
             // Cancel the default action, if needed
             event.preventDefault();
             // Trigger the button element with a click
-            document.getElementById("login_button").click();
+            document.getElementById("login-button").click();
         }
         });
 
