--- a/src/main/static/app.css
+++ b/src/main/static/app.css
@@ -29,7 +29,19 @@ html {
 }
 
 body{
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
     margin:0;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
 }
 
 .main-container{
