--- a/src/main/static/login.css
+++ b/src/main/static/login.css
@@ -4,6 +4,18 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    animation: fadeInAnimation ease 2.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
 }
 
 h1 {
