--- a/test/circle.css
+++ b/test/circle.css
@@ -9,15 +9,13 @@ body {
   background: #282626;
   height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
+
 }
 
 .circle-input {
-  width: 160px;
-  height: 160px;
+  width: 200px;
+  height: 200px;
   position: relative;
-  margin-right: 50px;
 }
 
 .extern{
@@ -54,7 +52,7 @@ body {
   display: flex;
 }
 
-#number{
+#circle-output{
   font-weight: 600px;
   color: black;
 }
@@ -64,52 +62,24 @@ circle {
   stroke: #0B99FF;
   stroke-width: 20px;
   stroke-dasharray: 502;
-  stroke-dashoffset: 0;
-  animation: drawCircle 3s ease-in-out forwards;
+
 }
 
 svg {
   position: absolute; 
-  transform:rotate(-90deg);
+  transform:rotate(-90deg); 
   top: 0;
   left:0; 
 }
-
-@keyframes drawCircle {
-  0% {
-    stroke-dashoffset: 502; /* Start with the circle completely hidden */
-  }
-  100% {
-    stroke-dashoffset: 0; /* Fully draw the circle */
-  }
-}
-
-.circular-container {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background-color: #D9D9D9;
-  }
   
 .circular-input {
   position: absolute;
-  width: 20px;
-  height: 20px;
-  background-color: #0B99FF;
+  width: 25px;
+  height: 25px;
+  background-color: rgba(0, 0, 0, 0);
   border-radius: 50%;
   cursor: grab;
-  user-drag: none;
-}
-
-.circular-fill {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: lightblue;
-  clip-path: polygon(50% 50%, 0 0, 0 0);
-  transform-origin: center center;
-  z-index: -1;
+  z-index: 2;
 }
 
 
