--- a/test/circle.css
+++ b/test/circle.css
@@ -1,33 +1,25 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Popins', sans-serif;
-}
-
-body {
-  background: #282626;
-  height: 100vh;
-  display: flex;
-
-}
+/* CIRCLE INPUT CSS - DO NOT TOUCH*/
 
 .circle-input {
+  font-family: 'Popins', sans-serif;
   width: 200px;
   height: 200px;
   position: relative;
 }
 
 .extern{
+  box-sizing: border-box;
   height: 200px;
   width: 200px;
   border-radius: 50%;
   background-color: #D9D9D9;
   box-shadow: 0px 0px 4px 10px rgba(0, 0, 0, 0.25);
   padding: 10px;
+  position: relative;
 }
 
 .outer {
+  box-sizing: border-box;
   height: 180px;
   width: 180px;
 
@@ -50,36 +42,49 @@ body {
   align-items: center;
   justify-content: center;
   display: flex;
+  flex-direction: column;
+}
+
+#circle-text {
+  font-size: x-small;
+  font-weight: 800;
+  user-select: none;
+  text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.2);
 }
 
 #circle-output{
-  font-weight: 600px;
+  font-size:xxx-large;
+  font-weight: bolder;
   color: black;
+  align-self: center;
+  user-select: none;
+  text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.5);
 }
 
 circle {
   fill: none;
-  stroke: #0B99FF;
   stroke-width: 20px;
   stroke-dasharray: 502;
-
+  stroke: red;
 }
 
 svg {
   position: absolute; 
-  transform:rotate(-90deg); 
+  transform: rotate(-90deg); 
   top: 0;
   left:0; 
 }
   
 .circular-input {
   position: absolute;
-  width: 25px;
-  height: 25px;
-  background-color: rgba(0, 0, 0, 0);
+  width: 22px;
+  height: 22px;
+  background-color: #646464;
+  border: 2px solid white;
   border-radius: 50%;
   cursor: grab;
   z-index: 2;
+  box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.5);
 }
 
-
+/* ----------- */
